[gd_scene format=3 uid="uid://da3xx3sv84d16"]

[ext_resource type="Script" uid="uid://vwmosne8nb8j" path="res://Character/CharacterController.gd" id="1_eon55"]
[ext_resource type="PackedScene" uid="uid://bqxs4mw763a8k" path="res://Art/Models/Ogre/Ogre.fbx" id="2_7k0ob"]
[ext_resource type="Script" uid="uid://cab4ad2nt21yn" path="res://Objects/Enemies/enemy_behavior.gd" id="2_hj1rv"]
[ext_resource type="Script" uid="uid://b88d4812atpa2" path="res://Character/Abilities/AbilityHandler.gd" id="4_xdxs7"]
[ext_resource type="Script" uid="uid://hmip4a5fhm63" path="res://Character/Abilities/Ability_Slash.gd" id="5_7w7q4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7k0ob"]
radius = 1.0
height = 4.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xdxs7"]
animation = &"metarig|Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7w7q4"]
animation = &"Running"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_h4c5h"]
filters = ["", "metarig/Skeleton3D:forearm.L", "metarig/Skeleton3D:forearm.R", "metarig/Skeleton3D:hand.L", "metarig/Skeleton3D:shoulder.L", "metarig/Skeleton3D:shoulder.R", "metarig/Skeleton3D:spine.001", "metarig/Skeleton3D:spine.005", "metarig/Skeleton3D:spine.006", "metarig/Skeleton3D:tool", "metarig/Skeleton3D:upper_arm.L", "metarig/Skeleton3D:upper_arm.R"]
mix_mode = 1
fadein_time = 0.1
fadeout_time = 0.1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_gaqko"]
graph_offset = Vector2(-529, 19)
nodes/Animation/node = SubResource("AnimationNodeAnimation_7w7q4")
nodes/Animation/position = Vector2(-260, 80)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_xdxs7")
"nodes/Animation 2/position" = Vector2(-280, 320)
nodes/OneShot/node = SubResource("AnimationNodeOneShot_h4c5h")
nodes/OneShot/position = Vector2(80, 120)
node_connections = [&"output", 0, &"OneShot", &"OneShot", 0, &"Animation", &"OneShot", 1, &"Animation 2"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xdxs7"]
height = 1.2363281
radius = 3.1699219

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7w7q4"]
height = 1.2363281
radius = 2.6987305

[node name="Ogre" type="CharacterBody3D" unique_id=2119124743]
script = ExtResource("1_eon55")
jump_precharge = false
metadata/_custom_type_script = "uid://vwmosne8nb8j"

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=359203146]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("CapsuleShape3D_7k0ob")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." unique_id=1028532782]
script = ExtResource("2_hj1rv")
target_spacing = 3.0

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=434754551]
root_node = NodePath("../OgreModel")
tree_root = SubResource("AnimationNodeBlendTree_gaqko")
anim_player = NodePath("../OgreModel/AnimationPlayer")
parameters/OneShot/active = false
parameters/OneShot/internal_active = false
parameters/OneShot/request = 0

[node name="OgreModel" parent="." unique_id=1527890184 instance=ExtResource("2_7k0ob")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="OgreModel/metarig" parent_id_path=PackedInt32Array(1527890184, 481199497) index="0" unique_id=167569504]
bones/0/position = Vector3(-7.105427e-17, 0.005519215, 0.06803663)
bones/1/position = Vector3(-2.414375e-16, 0.015219783, 4.1661602e-10)
bones/1/rotation = Quaternion(0.022147596, 3.2418512e-14, 5.2804e-09, 0.9997547)
bones/1/scale = Vector3(1, 0.9999999, 0.99999994)
bones/2/position = Vector3(6.5109285e-17, 0.023646759, -3.4062402e-11)
bones/2/rotation = Quaternion(-0.047077335, 5.668422e-15, -1.1224112e-08, 0.99889123)
bones/2/scale = Vector3(1, 1, 0.9999999)
bones/3/position = Vector3(-7.644808e-17, 0.023814382, 3.6981657e-10)
bones/3/rotation = Quaternion(-0.0002962823, -2.841949e-14, -7.0638856e-11, 0.99999994)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(-5.990829e-17, 0.023218734, 5.547029e-10)
bones/4/rotation = Quaternion(0.40505263, -1.08992275e-07, 4.8286022e-08, 0.91429335)
bones/4/scale = Vector3(1, 1.0000002, 1.0000001)
bones/5/position = Vector3(-2.9813465e-17, 0.0072298762, -5.077638e-09)
bones/5/rotation = Quaternion(-0.18074997, -1.17245804e-07, 2.1547077e-08, 0.9835291)
bones/5/scale = Vector3(1, 0.99999976, 0.9999999)
bones/6/position = Vector3(1.6925765e-15, 0.0077062966, 1.4345461e-09)
bones/6/rotation = Quaternion(-0.27237865, 1.1470202e-07, 3.2470062e-08, 0.96219015)
bones/6/scale = Vector3(1, 0.99999994, 0.99999994)
bones/8/rotation = Quaternion(-0.6534888, -0.33270147, -0.41664973, 0.5372757)
bones/8/scale = Vector3(1.0000001, 0.9999999, 0.99999994)
bones/9/position = Vector3(0.00041217532, 0.050865997, -0.0017611797)
bones/9/rotation = Quaternion(-0.33789107, 0.72038025, -0.36215308, 0.4855174)
bones/9/scale = Vector3(1.0000002, 1.0000001, 1)
bones/10/position = Vector3(9.423669e-09, 0.049307562, -2.0980306e-09)
bones/10/rotation = Quaternion(0.122441314, 0.1563426, -0.084590174, 0.976427)
bones/10/scale = Vector3(0.9999999, 1, 0.99999994)
bones/11/position = Vector3(-4.766036e-09, 0.036572043, -4.37985e-09)
bones/11/rotation = Quaternion(0.28124368, -0.05088045, 0.0054403585, 0.9582712)
bones/11/scale = Vector3(0.99999994, 0.99999976, 0.9999999)
bones/12/position = Vector3(0.0050764186, 0.00557459, -0.0127723785)
bones/12/rotation = Quaternion(-0.029107494, 0.7572769, 0.6510584, 0.042513464)
bones/12/scale = Vector3(1, 0.9999999, 1.0000001)
bones/14/rotation = Quaternion(-0.5184129, 0.48248678, 0.5343326, 0.46145785)
bones/14/scale = Vector3(1.0000001, 1.0000001, 1)
bones/15/position = Vector3(-0.00041217284, 0.05086599, -0.0017611803)
bones/15/rotation = Quaternion(-0.4365477, -0.30547062, 0.40281537, 0.7442134)
bones/16/position = Vector3(6.3291257e-09, 0.049307577, 5.2583554e-10)
bones/16/rotation = Quaternion(0.29355928, -0.12622112, 0.12969688, 0.93865323)
bones/16/scale = Vector3(0.99999994, 0.9999999, 0.9999999)
bones/17/position = Vector3(1.8523472e-09, 0.036572054, 3.5127834e-09)
bones/17/rotation = Quaternion(0.019799097, 0.034247223, 0.027949715, 0.99882627)
bones/17/scale = Vector3(1, 0.9999999, 0.9999998)
bones/19/position = Vector3(2.5920783e-16, -3.5711184e-10, -1.3852199e-09)
bones/19/rotation = Quaternion(-0.27730283, -0.73577195, -0.3467515, 0.51137674)
bones/19/scale = Vector3(0.9999998, 0.9999998, 0.9999999)
bones/21/position = Vector3(2.5920783e-16, -3.5711184e-10, -1.3852199e-09)
bones/21/rotation = Quaternion(-0.27730295, 0.7357719, 0.34675148, 0.51137686)
bones/21/scale = Vector3(0.99999994, 0.99999976, 0.99999976)
bones/23/position = Vector3(0.019314457, 0.007080845, 0.0025938607)
bones/23/rotation = Quaternion(0.82812715, -1.340036e-08, 2.0333353e-07, 0.5605403)
bones/23/scale = Vector3(1, 0.9999999, 0.99999917)
bones/24/position = Vector3(-5.901272e-10, 0.042282134, -2.6171806e-10)
bones/24/rotation = Quaternion(-0.084293135, -1.1696644e-07, -2.5450195e-08, 0.99644107)
bones/24/scale = Vector3(1, 1.0000001, 1)
bones/25/position = Vector3(9.367507e-17, 0.036104742, 1.5895815e-09)
bones/25/rotation = Quaternion(-0.48779833, 3.1197743e-07, -1.7483626e-07, 0.8729564)
bones/25/scale = Vector3(1, 0.99999994, 1.0000001)
bones/26/position = Vector3(1.9073487e-09, 0.012091057, 4.717985e-10)
bones/26/rotation = Quaternion(1.0277485e-07, 0.95501137, -0.2965691, 2.4694603e-07)
bones/26/scale = Vector3(1, 0.9999995, 0.9999999)
bones/28/position = Vector3(-0.0037994657, 0.0023782896, 0.008702403)
bones/28/rotation = Quaternion(0.675295, 0.67529494, -0.2097061, 0.20970657)
bones/28/scale = Vector3(1.0000001, 1, 0.99999994)
bones/30/position = Vector3(-0.019314453, 0.007080845, 0.0025938514)
bones/30/rotation = Quaternion(0.985701, 2.5234769e-08, -2.7857183e-10, -0.16850375)
bones/30/scale = Vector3(1, 0.9999999, 0.99999917)
bones/31/position = Vector3(-5.901278e-10, 0.04228214, -2.3390373e-10)
bones/31/rotation = Quaternion(0.36848906, 1.0164469e-07, -6.740498e-08, 0.9296321)
bones/31/scale = Vector3(1, 1.0000001, 1)
bones/32/position = Vector3(1.3183898e-16, 0.036104735, 2.6892886e-09)
bones/32/rotation = Quaternion(-0.28367755, -3.4323196e-07, 1.0112135e-07, 0.9589197)
bones/32/scale = Vector3(1, 0.99999994, 0.99999994)
bones/33/position = Vector3(-1.9073483e-09, 0.012091057, 4.717985e-10)
bones/33/rotation = Quaternion(-1.0248014e-07, 0.95501137, -0.2965691, -2.4703752e-07)
bones/33/scale = Vector3(1, 0.99999946, 0.9999998)
bones/35/position = Vector3(0.0037994657, 0.0023782891, 0.008702403)
bones/35/rotation = Quaternion(0.675295, -0.67529494, 0.2097061, 0.20970656)
bones/35/scale = Vector3(1.0000001, 1, 0.99999994)

[node name="Pommel" parent="OgreModel/metarig/Skeleton3D" index="0" unique_id=608708645]
transform = Transform3D(0.9997084, 0.023241028, -0.006569594, 0.021688, -0.9835709, -0.17921335, -0.010626797, 0.17901875, -0.9837883, 0.056473874, 0.043482155, 0.04959931)
bone_idx = 12

[node name="AbilityHandler" type="Node3D" parent="." unique_id=840311810]
script = ExtResource("4_xdxs7")
stamina_regen = 999999999999.0
metadata/_custom_type_script = "uid://b88d4812atpa2"

[node name="Ability_Slash" type="Node3D" parent="AbilityHandler" unique_id=976496477 node_paths=PackedStringArray("slash_hit_box")]
script = ExtResource("5_7w7q4")
slash_hit_box = NodePath("Area3D")
attackCooldown = 3.0
damage = 25.0
knockback = 25.0
metadata/_custom_type_script = "uid://hmip4a5fhm63"

[node name="Area3D" type="Area3D" parent="AbilityHandler/Ability_Slash" unique_id=1749347412]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AbilityHandler/Ability_Slash/Area3D" unique_id=1962375761]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3928466, -3.2652886)
shape = SubResource("CylinderShape3D_xdxs7")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="AbilityHandler/Ability_Slash/Area3D" unique_id=963042097]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.926461, 1.3928466, -1.7274402)
shape = SubResource("CylinderShape3D_7w7q4")

[connection signal="on_attack_fired" from="AbilityHandler/Ability_Slash" to="AnimationTree" method="set" binds= ["parameters/OneShot/request", 1]]

[editable path="OgreModel"]
